rename to gongtimer; add readme

--- a/README.qmd
+++ b/README.qmd
@@ -1,13 +1,17 @@
 # gong
 
-A quarto extension for `reveal.js` that automatically creates agenda slides from H1 heading titles.
+A quarto extension for `reveal.js` that adds an elapsed time bar at the bottom of the presentation.
+
+This is based on the `ElapsedTimeBar` Reveal.js extension
+
+https://github.com/wicksome/reveal.js-elapsed-time-bar
 
 ## Installation
 
 To install this extension in your current directory (or into the Quarto project that you're currently working in), use the following command:
 
 ``` shell
-quarto install extension andrie/reveal-auto-agenda
+quarto install extension andrie/quarto-gongtimer
 ```
 
 ## Enabling
@@ -15,82 +19,20 @@ quarto install extension andrie/reveal-auto-agenda
 Add this to your document or project options:
 
 ``` yaml
-filters:
-  - reveal-auto-agenda
-```
-
-## Usage
-
-Simply create your slides as normal, with H1 header slides marking transitions between agenda items.
-
-Important: the extension assumes that your H1 header slides contains no other content, and that you want these slides to be replaced by the rolling agenda.
-
-This extension:
-
--   Creates a list of the text of each H1 slide.
--   Insert this list into the body of each H1 slide.
--   Inserts CSS that marks the active section with a border box around the text.
-
-## Example
-
-![Screenshot of three slides containing the outline, with from left to right, the 100 percent opacity bullet list item for the active section and the two other items in 25 percent opacity, on the second slides, first and third items are 25 percent opacity but not the second, and finally on the third slides, the first two items are 25 percent opacity.](example.png)
-
-## Custom CSS
-
-The extension will create custom CSS elements. You can override these in your own CSS template:
-
-``` css
-.agenda {
-}
-
-.agenda-slide h1 {
-  size: 0em;
-  display: none;
-}
-
-.agenda-inactive {
-  opacity: 0.25;
-  margin-top: -0.5em;
-  margin-bottom: -0.5em;
-}
-
-.agenda-active {
-  margin-top: -0.5em;
-  margin-bottom: -0.5em;
-}
+format: 
+  revealjs:
+    gongtimer:
+      - allottedTime: 1
+revealjs-plugins: 
+  - gongtimer
 ```
 
 ## Global options
 
-To change the default behaviour, include `auto-agenda` options in your yaml:
-
-``` yaml
-filters:
-  - reveal-auto-agenda
-auto-agenda:
-  bullets: numbered
-  heading: Agenda
-```
-
 You can change these options:
 
-| Option    | Description                                                                               |
-|-----------|-------------------------------------------------------------------------------------------|
-| `bullets` | Change the agenda slides to have:                                                         |
-|           | \- `none`: No bullets or numbers                                                          |
-|           | \- `bullets`: Bullet list (the default)                                                   |
-|           | \- `numbered`: Numbered list                                                              |
-| `heading` | If you set this option, then each agenda slide will have a heading above the agenda list. |
-|           | Use this to set a heading to "Agenda", "Table of Contents", or similar.                   |
-
-## Exclude auto-agenda from specific slides
-
-If you want to suppress the agenda on a particular slide, add the class `no-auto-agenda` to the slide:
-
-``` md
-# Header {.no-auto-agenda}
-```
-
-## Live preview
-
-You can view a live preview of an example presentation at <https://andrie.quarto.pub/reveal-auto-agenda/>.
+| Option               | Description                                               |
+|----------------|----------------------------------------------------------|
+| `allottedTime`       | Time in minutes for the presentation                      |
+| `progressBarHeight`  | Height (in pixels) of the page / time progress bar        |
+| `barColor`           | Bar color, expressed as hex `#00ff00` or `rgb(0, 255, 0)` |
