--- a/README.qmd
+++ b/README.qmd
@@ -1,3 +1,7 @@
+---
+format: gfm
+---
+
 # gong
 
 A quarto extension for `reveal.js` that adds an elapsed time bar at the bottom of the presentation.
