--- a/README.qmd
+++ b/README.qmd
@@ -2,7 +2,7 @@
 format: gfm
 ---
 
-# gong
+# gongtimer
 
 A quarto extension for `reveal.js` that adds an elapsed time bar at the bottom of the presentation.
 
