fix: better descriptive options

--- a/README.qmd
+++ b/README.qmd
@@ -20,7 +20,16 @@ quarto install extension andrie/quarto-gongtimer
 
 ## Enabling
 
-Add this to your document or project options:
+Add the plugin to your quarto `yaml` header
+
+``` yaml
+revealjs-plugins: 
+  - gongtimer
+```
+
+## Changing options
+
+To change default options, use:
 
 ``` yaml
 format: 
@@ -31,12 +40,10 @@ revealjs-plugins:
   - gongtimer
 ```
 
-## Global options
-
 You can change these options:
 
-| Option               | Description                                               |
-|----------------|----------------------------------------------------------|
-| `allottedTime`       | Time in minutes for the presentation                      |
-| `progressBarHeight`  | Height (in pixels) of the page / time progress bar        |
-| `barColor`           | Bar color, expressed as hex `#00ff00` or `rgb(0, 255, 0)` |
+| Option              | Description                                                 |
+|------------------|------------------------------------------------------|
+| `allottedTime`      | Time in minutes for the presentation (default is 5 minutes) |
+| `progressBarHeight` | Height (in pixels) of the page / time progress bar          |
+| `barColor`          | Bar color, expressed as hex `#00ff00` or `rgb(0, 255, 0)`   |
