--- a/example.qmd
+++ b/example.qmd
@@ -14,6 +14,35 @@ revealjs-plugins:
 
 The time bar is at the bottom of your screen.
 
-## Why is it called gongtimer?
+This time progress bar gives a visual indication of the elapsed and remaining time.
+
+The default value is set to 5 minutes, for typical lightning talks, but you can change this in the quarto yaml header.
+
+## Changing the options
+
+To change default options, use:
+
+``` yaml
+format: 
+  revealjs:
+    gongtimer:
+      - allottedTime: 1 # time in minutes
+revealjs-plugins: 
+  - gongtimer
+```
+
+
+## Changing the options
+
+You can change these settings:
+
+| Option              | Description                                                    |
+|---------------------|----------------------------------------------------------------|
+| `allottedTime`      | Time in minutes for the presentation (default is 5 minutes)    |
+| `progressBarHeight` | Height (in pixels) of the page / time progress bar             |
+| `barColor`          | Bar color, expressed as hex `#00ff00` or `rgb(0, 255, 0)`  |
+
+
+## Why is it called `gongtimer`?
 
 Because of a long tradition at RStudio / Posit where lightning talks are timed out by Hadley beating on a gong.
